1999-07-05  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* Makefile.in:
	    Version 2.99.51-pre1

	* smtpserver/smtpcmds.c, smtpserver/smtpserver.h:
	    Limit the length of the "HELO/EHLO" string, and the length
	    of reported reversed hostname in the "rcvdfrom" envelope
	    header, and thus in the resulting "Received:" header.

1999-07-04  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/rfc822.c, router/rfc822hdrs.c, router/libta/header.c:
	    A bit more gymnastics to get rid of:
	        Received: from localhost (user '...' uid#1234) by ...
	    and to replace it with:
	        Received: (from localhost user '...' uid#1234) by ...

	* transports/smtp/smtp.c:
	    Fixed the errorneous 'Final-Recipient:' lines in the
	    delivery reports.

	* scheduler/threads.c:
	    Re-enable the kludge-report; if they don't happen, the
	    smtp.c is ok, if they do...

	* lib/rfc822scan.c, lib/token.c, router/rfc822hdrs.c:
	    Multiline compound tokens (topic for recent activities)
	    had still major problems.  Did also modify "Received:"
	    header content generation, although not quite sufficiently
	    in all situations (considering when/how to fold commentary
	    material in 'from' entry.)

1999-07-03  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* man/smtpserver.8, smtpserver/smtpserver.c, smtpserver/smtpcmds.c,
	  smtpserver/smtpserver.h, smtpserver/smtpdata.c, smtpserver/cfgread.c,
	  proto/smtpserver.conf.in:
	    "PARAM min-availspace 5000" -- specify the minimum required
	    available space in the $POSTOFFICE/ directory. In KILOBYTES.

1999-07-02  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpserver.c, contrib/whoson-1.08.tgz:
	    Arkadiusz Mi?kiewicz <misiek@misiek.eu.org>:
	    - update to newer whoson package
	    - adding option "-w" to smtpserver to actually
	      do the query of Whoson.  Allows code being
	      compiled in without it being used...

	* proto/cf/canon.cf, lib/rfc822scan.c:
	    Turns out the best way to fix the 'foo\!faa!fii'