@@ -1,5 +1,10 @@
 1999-07-05  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
+	* lib/rfc822scan.c:
+	    MKERROR() did crash for some reason in previous form.
+	    Modified call a bit and changed it into a static function
+	    of its own.  Now it seems to work.
+
 	* Makefile.in:
 	    Version 2.99.51-pre1
 
